test_suite/tests/ui/pass/option_mut_type.rs
use clapi::macros::*;

#[command]
#[option(number)]
fn test(mut number: u32){}

fn main(){}