test_suite/tests/ui/fail/invalid_array_min_max/invalid_option_array_min_max.rs
use clapi::macros::*;

#[command]
#[option(values, min=0, max=3)]
fn test(values: [u32; 3]){}

fn main(){}